Added JavaScript validation for the Coaching form. Started optimizing responsive design - ready with <= 768px displays

--- a/SonaWebsite/index.html
+++ b/SonaWebsite/index.html
@@ -26,16 +26,16 @@
             </hgroup>          
         </header>
 
-        <nav class="main-nav">
+        <nav class="main-nav sticky">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="lore.html">Lore</a></li>
                 <li><a href="skins.html">Skins</a></li>
-                <li><a href="coaching.html">Order Sona coaching</a></li>
+                <li><a href="coaching.html">Coaching</a></li>
             </ul>
         </nav>
 
-        <main>
+        <main class="content">
             <!-- moje bi iframe? -->
             <section>
                 <h2>Overview</h2>
