--- a/SonaWebsite/skins.html
+++ b/SonaWebsite/skins.html
@@ -12,20 +12,16 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <link type="text/css" rel="stylesheet" href="styles.css" !important>
+    <link type="text/css" rel="stylesheet" href="styles.css">
     <title>Sona - Maven of the strings</title>
 </head>
-
 <body>
-
     <div class="main-container">
-
         <header class="main-header" id="skins-header-background">
             <hgroup>
                 <h1>Sona's</h1>
                 <h2>skins</h2>
             </hgroup>
-            </div>
         </header>
 
         <nav class="main-nav" id="skins-nav">
@@ -59,6 +55,12 @@
                 </article>
                 <article>
                     <figure>
+                        <img src="images/SilentNightSona-min.jpg" alt="Silent Night Sona">
+                    </figure>
+                    <p>Silent Night Sona</p>
+                </article>
+                <article>
+                    <figure>
                         <img src="images/ArcadeSona-min.jpg" alt="Arcade Sona">
                     </figure>
                     <p>Arcade Sona</p>
@@ -87,18 +89,19 @@
                     </figure>
                     <p>PSYOPS Sona</p>
                 </article>
-            <section>
+            </section>
             </main>
 
             <section class="gallery-container">
                 <div class="row">
                     <div class="col-md-12">
-                        <div id="custCarousel" class="carousel slide"; data-ride="carousel" align="center">
+                        <div id="custCarousel" class="carousel slide" data-ride="carousel">
                             <!-- slides -->
                             <div class="carousel-inner">
                                 <div class="carousel-item active"> <img src="images/Sona-min.jpg" alt="Sona"><p class="carousel-nametag">Sona</p> </div>
                                 <div class="carousel-item"> <img src="images/PentakillSona-min.jpg" alt="Pentakill Sona"><p class="carousel-nametag">Pentakill Sona</p> </div>
                                 <div class="carousel-item"> <img src="images/GuqinSona-min.jpg" alt="Guqin Sona"><p class="carousel-nametag">Guqin Sona</p> </div>
+                                <div class="carousel-item"> <img src="images/SilentNightSona-min.jpg" alt="Silent Night Sona Sona"><p class="carousel-nametag">Silent Night Sona</p> </div>
                                 <div class="carousel-item"> <img src="images/ArcadeSona-min.jpg" alt="Arcade Sona"><p class="carousel-nametag">Arcade Sona</p> </div>
                                 <div class="carousel-item"> <img src="images/SweetheartSona-min.jpg" alt="Sweetheart Sona"><p class="carousel-nametag">Sweetheart Sona</p> </div>
                                 <div class="carousel-item"> <img src="images/DJSona-min.jpg" alt="DJ Sona"><p class="carousel-nametag">DJ Sona</p> </div>
@@ -107,37 +110,32 @@
                             </div> <!-- Left right --> <a class="carousel-control-prev" href="#custCarousel" data-slide="prev"> <span class="carousel-control-prev-icon"></span> </a> <a class="carousel-control-next" href="#custCarousel" data-slide="next"> <span class="carousel-control-next-icon"></span> </a> 
                             <!-- Thumbnails -->
                             <ol class="carousel-indicators list-inline">
-                                <li class="list-inline-item active"> <a id="carousel-selector-0" class="selected" data-slide-to="0" data-target="#custCarousel"> <img src="images/Sona-min.jpg" class="img-fluid"> </a> </li>
-                                <li class="list-inline-item"> <a id="carousel-selector-1" data-slide-to="1" data-target="#custCarousel"> <img src="images/PentakillSona-min.jpg" class="img-fluid"> </a> </li>
-                                <li class="list-inline-item"> <a id="carousel-selector-2" data-slide-to="2" data-target="#custCarousel"> <img src="images/GuqinSona-min.jpg" class="img-fluid"> </a> </li>
-                                <li class="list-inline-item"> <a id="carousel-selector-2" data-slide-to="3" data-target="#custCarousel"> <img src="images/ArcadeSona-min.jpg" class="img-fluid"> </a> </li>
-                                <li class="list-inline-item"> <a id="carousel-selector-2" data-slide-to="4" data-target="#custCarousel"> <img src="images/SweetheartSona-min.jpg" class="img-fluid"> </a> </li>
-                                <li class="list-inline-item"> <a id="carousel-selector-2" data-slide-to="5" data-target="#custCarousel"> <img src="images/DJSona-min.jpg" class="img-fluid"> </a> </li>
-                                <li class="list-inline-item"> <a id="carousel-selector-2" data-slide-to="6" data-target="#custCarousel"> <img src="images/OdysseySona-min.jpg" class="img-fluid"> </a> </li>
-                                <li class="list-inline-item"> <a id="carousel-selector-2" data-slide-to="7" data-target="#custCarousel"> <img src="images/PSYOpsSona-min.jpg" class="img-fluid"> </a> </li>
+                                <li class="list-inline-item active"> <a id="carousel-selector-0" class="selected" data-slide-to="0" data-target="#custCarousel"> <img src="images/Sona-min.jpg" alt="Sona" class="img-fluid"> </a> </li>
+                                <li class="list-inline-item"> <a id="carousel-selector-1" data-slide-to="1" data-target="#custCarousel"> <img src="images/PentakillSona-min.jpg" alt="Pentakill Sona" class="img-fluid"> </a> </li>
+                                <li class="list-inline-item"> <a id="carousel-selector-2" data-slide-to="2" data-target="#custCarousel"> <img src="images/GuqinSona-min.jpg" alt="Guqin Sona" class="img-fluid"> </a> </li>
+                                <li class="list-inline-item"> <a id="carousel-selector-3" data-slide-to="3" data-target="#custCarousel"> <img src="images/SilentNightSona-min.jpg" alt="Silent Night Sona" class="img-fluid"> </a> </li>
+                                <li class="list-inline-item"> <a id="carousel-selector-4" data-slide-to="4" data-target="#custCarousel"> <img src="images/ArcadeSona-min.jpg" alt="Arcade Sona" class="img-fluid"> </a> </li>
+                                <li class="list-inline-item"> <a id="carousel-selector-5" data-slide-to="5" data-target="#custCarousel"> <img src="images/SweetheartSona-min.jpg" alt="Sweetheart Sona" class="img-fluid"> </a> </li>
+                                <li class="list-inline-item"> <a id="carousel-selector-6" data-slide-to="6" data-target="#custCarousel"> <img src="images/DJSona-min.jpg" alt="DJ Sona" class="img-fluid"> </a> </li>
+                                <li class="list-inline-item"> <a id="carousel-selector-7" data-slide-to="7" data-target="#custCarousel"> <img src="images/OdysseySona-min.jpg" alt="Odyssey Sona" class="img-fluid"> </a> </li>
+                                <li class="list-inline-item"> <a id="carousel-selector-8" data-slide-to="8" data-target="#custCarousel"> <img src="images/PSYOpsSona-min.jpg" alt="PSYOPS Sona" class="img-fluid"> </a> </li>
                             </ol>
                         </div>
                     </div>
                 </div>
             </section>
 
-            <footer>
-
-                <section class="copyright">
+        <footer>
+            <section class="copyright">
                     <p>Made by Ivan Mitovski</p>
                     <p> &copy; Some rights reserved</p>
-                </section>
-                <section class="socials">
-        
-                    <a href="https://www.instagram.com/"><img src="images/instagramicon.svg"></a>
-                    <a href="https://www.facebook.com/"><img src="images/fbicon.svg"></a>
-                    <a href="https://github.com/iwanmitowski"><img src="images/githubicon.svg"></a>
-                   
-                </section>
-
-            </footer>
-
+            </section>
+            <section class="socials">
+                <a href="https://www.instagram.com/"><img src="images/instagramicon.svg" alt="Instagram icon"></a>
+                <a href="https://www.facebook.com/"><img src="images/fbicon.svg" alt="Facebook icon"></a>
+                <a href="https://github.com/iwanmitowski"><img src="images/githubicon.svg" alt="Github icon"></a>
+            </section>
+        </footer>
     </div>
-
 </body>
 </html>
