--- a/coaching.html
+++ b/coaching.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="images/sonaIcon.jpg" type="image/gif" sizes="16x16">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Crete+Round&display=swap" rel="stylesheet">
-    <link type="text/css" rel="stylesheet" href="styles.css">
+    <link type="text/css" rel="stylesheet" href="css/styles.css">
     <script src="javascript/js.js"></script>
     <title>Sona - Maven of the strings</title>
 </head>
