Final site version with videos instead of thumbnails for her abilities

--- a/index.html
+++ b/index.html
@@ -41,40 +41,49 @@
                 <article>
                     <h3><img src="images/SonaPassive.png" alt="Sona passive icon" class="ability-icon">Power Chord</h3>
                     <figure>
-                        <img src="images/SonaPassiveReview.png" alt="Sona Passive review">
+                        <video src="video/SonaPassive.webm" controls autoplay loop muted>
+                            Your browser does not support the video tag.
+                        </video>
                     </figure>
                     <p>Passive - After 3 spell casts, Sona's next attack will deal bonus magic damage in addition to an additional effect based on what song Sona last activated.</p>
                 </article>
                 <article>
                     <h3><img src="images/SonaQ.png" alt="Sona Q icon" class="ability-icon">Hymn of valor</h3>
                     <figure>
-                        <img src="images/SonaQReview.png" alt="Sona Q review">
+                        <video src="video/SonaQ.webm" controls autoplay loop muted>
+                            Your browser does not support the video tag.
+                        </video>
                     </figure>
                     <p>Q - Sona plays the Hymn of Valor, sends out bolts of sound, dealing magic damage to two nearby enemies, prioritizing champions and monsters. Sona gains a temporary aura that grants allies tagged by the zone bonus damage on their next attack against enemies.</p>
                 </article>
                 <article>
                     <h3><img src="images/SonaW.png" alt="Sona W icon" class="ability-icon">Aria of Preseverance</h3>
                     <figure>
-                        <img src="images/SonaWReview.png" alt="Sona W review">
+                        <video src="video/SonaW.webm" controls autoplay loop muted>
+                            Your browser does not support the video tag.
+                        </video>
                     </figure>
                     <p>W - Sona plays the Aria of Perseverance, sending out protective melodies, healing Sona and a nearby wounded ally. Sona gains a temporary aura that grants allies tagged by the zone a temporary shield.</p>
                 </article>
                 <article>
                     <h3><img src="images/SonaE.png" alt="Sona E icon" class="ability-icon">Song of Celerity</h3>
                     <figure>
-                        <img src="images/SonaEReview.png"  alt="Sona E review">
+                        <video src="video/SonaE.webm" controls autoplay loop muted>
+                            Your browser does not support the video tag.
+                        </video>
                     </figure>
                     <p>E - Sona plays the Song of Celerity, granting nearby allies bonus Movement Speed. Sona gains a temporary aura that grants allied champions tagged by the zone bonus Movement Speed.</p>
                 </article>
                 <article>
                     <h3><img src="images/SonaR.png" alt="Sona R icon" class="ability-icon">Crescendo</h3>
                     <figure>
-                        <img src="images/SonaRReview.png"  alt="Sona R review">
+                        <video src="video/SonaR.webm" controls autoplay loop muted>
+                            Your browser does not support the video tag.
+                        </video>
                     </figure>
                     <p>R - Sona plays her ultimate chord, stunning enemy champions and forcing them to dance and dealing magic damage to them. Each rank reduces the base cooldown of Sona's basic abilities.</p>
                 </article>
             </section>
-
             
             <img src="images/musicalnotes.png" class="notes" alt="Musical notes" id="left-note">
             <img src="images/musicalnotes.png" class="notes" alt="Musical notes" id="right-note">
