Minor semantic BugFix

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <article>
                     <h3><img src="images/SonaPassive.png" alt="Sona passive icon" class="ability-icon">Power Chord</h3>
                     <figure>
-                        <video src="video/SonaPassive.webm" controls autoplay loop muted>
+                        <video src="video/SonaPassive.webm" controls autoplay loop muted type="video/webm">
                             Your browser does not support the video tag.
                         </video>
                     </figure>
@@ -50,7 +50,7 @@
                 <article>
                     <h3><img src="images/SonaQ.png" alt="Sona Q icon" class="ability-icon">Hymn of valor</h3>
                     <figure>
-                        <video src="video/SonaQ.webm" controls autoplay loop muted>
+                        <video src="video/SonaQ.webm" controls autoplay loop muted type="video/webm">
                             Your browser does not support the video tag.
                         </video>
                     </figure>
@@ -59,7 +59,7 @@
                 <article>
                     <h3><img src="images/SonaW.png" alt="Sona W icon" class="ability-icon">Aria of Preseverance</h3>
                     <figure>
-                        <video src="video/SonaW.webm" controls autoplay loop muted>
+                        <video src="video/SonaW.webm" controls autoplay loop muted type="video/webm">
                             Your browser does not support the video tag.
                         </video>
                     </figure>
@@ -68,7 +68,7 @@
                 <article>
                     <h3><img src="images/SonaE.png" alt="Sona E icon" class="ability-icon">Song of Celerity</h3>
                     <figure>
-                        <video src="video/SonaE.webm" controls autoplay loop muted>
+                        <video src="video/SonaE.webm" controls autoplay loop muted type="video/webm">
                             Your browser does not support the video tag.
                         </video>
                     </figure>
@@ -77,7 +77,7 @@
                 <article>
                     <h3><img src="images/SonaR.png" alt="Sona R icon" class="ability-icon">Crescendo</h3>
                     <figure>
-                        <video src="video/SonaR.webm" controls autoplay loop muted>
+                        <video src="video/SonaR.webm" type="video/webm" controls autoplay loop muted type="video/webm">
                             Your browser does not support the video tag.
                         </video>
                     </figure>
