--- a/coaching.html
+++ b/coaching.html
@@ -10,7 +10,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Crete+Round&display=swap" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="css/styles.css">
-    <script src="javascript/js.js"></script>
     <title>Sona - Maven of the strings</title>
 </head>
 <body>
@@ -75,7 +74,7 @@
                 <input type="date" name="deadline" required id="fDeadline">
 
                 <textarea name="details" placeholder="Additional details..."></textarea>
-                <input type="submit" value="Send" onclick="Validate()">
+                <input type="submit" value="Send" onclick="return Validate()">
 
             </form>
         </section>
@@ -120,5 +119,6 @@
         </section>
     </footer>
 </div>
+<script src="javascript/js.js"></script>
 </body>
 </html>
